embedded/ROS2_WS_TEST/log/build_2024-10-04_16-18-54/sub1/stderr.log
  File "C:\Users\SSAFY\Desktop\ros2_ws\install\sub1\Lib\site-packages\sub1\charge_ing.py", line 18
    
    ^
SyntaxError: unexpected EOF while parsing

